2009-03-26  Daniel Elstner  <danielk@openismus.com>

	* scripts/dk-warn.m4: New file defining DK_ARG_ENABLE_WARNINGS().
	* scripts/macros.m4: Remove the old GTKMM_ARG_ENABLE_WARNINGS().
	* configure.in: Use new macro DK_ARG_ENABLE_WARNINGS() to set the
	Makefile variable $(GLIBMM_WXXFLAGS).
	* build_shared/Makefile_build.am_fragment (all_includes): Insert
	$(GLIBMM_WXXFLAGS).  Also move deprecation flags here.
	* tools/extra_defs_gen/Makefile.am (INCLUDES): Insert
	$(GLIBMM_WXXFLAGS).
	* demos/Makefile.am (all_includes): ditto,
	* demos/gtk-demo/Makefile.am (all_includes): ditto,
	* tests/Makefile.am_fragment (INCLUDES): ditto.

2009-03-26  Daniel Elstner  <danielk@openismus.com>

	* gtk/src/messagedialog.ccg (MessageDialog::set_secondary_text):
	Fix nasty security hole discovered by GCC:  A non-literal was
	used as a varargs format string.
	* gtk/src/notebook.ccg: Spring cleaning.
	(PageList::find): Fix broken loop end condition discovered by
	GCC.  Replace the whole thing by std::advance().
	* gtk/src/calendar.ccg (SignalProxy_Details_gtk_callback): Remove
	model argument name to avoid a warning.  Also do a bit of spring
	cleaning.

2009-03-26  Armin Burgmeier  <armin@openismus.com>

	* win32_installer/gtkmm-installer.nsi.in: Added GTK+ pixbuf loaders
	to the installer (Damon Register).

2009-03-23  Daniel Elstner  <danielk@openismus.com>

	* gtk/src/builder.{ccg,hg}: Conditionalize all exception handling
	code in order to fix the build with --disable-api-exceptions.
	* gtk/src/printjob.hg: ditto,
	* demos/gtk-demo/example_images.cc: ditto,
	* demos/gtk-demo/example_treeview_treestore.cc: ditto,

2009-03-17  Armin Burgmeier  <armin@openismus.com>

	* MSVC_Net2005/gtkmm/gtkmm.vcproj:
	* MSVC_Net2008/gtkmm/gtkmm.vcproj: Added activatable.[h|cc] and
	orientable.[h|cc] to the project.

	* win32_installer/gtkmm-vc80-2_4.vsprops:
	* win32_installer/gtkmm-vc80-d-2_4.vsprops: Disable warning 4312,
	since a glib 2.20 header file triggers it, and this clutters the