@@ -1,5 +1,14 @@
 2009-03-26  Daniel Elstner  <danielk@openismus.com>
 
+	* configure.ac: Rename from configure.in.
+	* autogen.sh: Fix reference to configure.in.
+	* MSVC_Net2005/glibmm/Makefile.am: ditto,
+	* MSVC_Net2005/giomm/Makefile.am: ditto,
+	* MSVC_Net2008/glibmm/Makefile.am: ditto,
+	* MSVC_Net2008/giomm/Makefile.am: ditto.
+
+2009-03-26  Daniel Elstner  <danielk@openismus.com>
+
 	* scripts/dk-warn.m4: New file defining DK_ARG_ENABLE_WARNINGS().
 	* scripts/macros.m4: Remove the old GTKMM_ARG_ENABLE_WARNINGS().
 	* configure.in: Use new macro DK_ARG_ENABLE_WARNINGS() to set the
